--- a/serverless/vote/package.json
+++ b/serverless/vote/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/client-s3": "^3.758.0",
-    "@aws-sdk/lib-dynamodb": "^3.0.0"
+    "@aws-sdk/lib-dynamodb": "^3.0.0",
+    "@aws-sdk/s3-request-presigner": "^3.812.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.130",
