--- a/serverless/autocomplete/package.json
+++ b/serverless/autocomplete/package.json
@@ -7,12 +7,15 @@
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rm -rf dist",
-    "deploy": "npm run clean && npm run build && ./deploy.sh"
+    "deploy": "npm run clean && npm run build && ./deploy.sh",
+    "split-csv-letter": "npx ts-node src/split_csv_by_letter.ts",
+    "split-csv-qid": "npx ts-node src/split_csv_by_qid.ts",
+    "split-csv": "npx ts-node src/split_csv_files.ts"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/aws-lambda": "^8.10.119",
     "@types/node": "^20.5.7",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
   }
 }
