Sync countries to frontend

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,1 +1,10 @@
-{ "type": "module" }
+{
+  "type": "module",
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.4"
+  },
+  "scripts": {
+    "sync": "tsx sync-backend-types.ts"
+  }
+}
